Fixed Galleria image colors in dark mode

--- a/sass/deep-thought.sass
+++ b/sass/deep-thought.sass
@@ -23,6 +23,9 @@ body[theme="dark"]
 body[theme="dark"] iframe
     filter: invert(1) hue-rotate(180deg)
 
+body[theme="dark"] .galleria-image img
+  filter: invert(1) hue-rotate(180deg)
+
 section
     flex: 1
 
